[metadata]
name = git-ls-anytree
author = CJ Harries
author_email = cj@wizardsoftheweb.pro
url = https://github.com/wizardsoftheweb/git-ls-anytree#readme
description = Runs git-ls-tree through anytree for easy consumption
long_description = file: README.rst
license = file: LICENSE.rst
requires =
    anytree
packages =
    git_ls_anytree

[tool:pytest]
addopts = -v -x --cov=git_ls_anytree
