[metadata]
author = CJ Harries
author_email = cj@wizardsoftheweb.pro
url = https://github.com/wizardsoftheweb/git-ls-anytree#readme
description = Runs git-ls-tree through anytree for easy consumption
long_description = file: README.rst
license = ISC
install_requires =
    anytree
requires =
    anytree

[tool:pytest]
addopts = -v -x --cov-report html --cov-report term --cov=git_ls_anytree
